--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tilwat Quran</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@2.51.4/dist/full.css" rel="stylesheet" type="text/css" />
+    
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -19,8 +22,16 @@
     </script>
 </head>
 <body>
-    
+    <header class="text-center bg-slate-300 text-gray-600 py-5">
+        <h1 class="text-4xl">Tilwat the Quran when you are not with the physical Quran</h1>
+        <p class="mt-2">It's Free!!!</p>
+    </header>
 
+    <main>
+        <div id="cards-container">
+
+        </div>
+    </main>
 
     <script src="./js/index.js"></script>
 </body>
