--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
     </script>
 </head>
 <body>
-    <header class="text-center bg-slate-300 text-gray-600 py-5">
+    <header class="text-center bg-slate-300 text-gray-600 py-5 shadow-xl">
         <h1 class="text-4xl">Tilwat the Quran when you are not with the physical Quran</h1>
         <p class="mt-2">It's Free!!!</p>
     </header>
 
-    <main>
-        <div id="cards-container">
-
+    <main class="md:container md:mx-auto mt-6">
+        <div id="cards-container" class="grid md:grid-cols-3 gap-6">
+            <!-- Cards Adding Dynamically -->
         </div>
     </main>
 
