--- a/index.html
+++ b/index.html
@@ -28,8 +28,22 @@
     </header>
 
     <main class="md:container md:mx-auto mt-6">
+        <!-- Cards -->
         <div id="cards-container" class="grid md:grid-cols-3 gap-6">
             <!-- Cards Adding Dynamically -->
+        </div>
+
+        <!-- Modal -->
+        <input type="checkbox" id="my-modal" class="modal-toggle" />
+        <div class="modal">
+            <div class="modal-box">
+                <label for="my-modal" class="btn btn-sm btn-circle absolute right-2 top-2">✕</label>
+                <h3 class="font-bold text-lg">Congratulations random Internet user!</h3>
+                <p class="py-4">You've been selected for a chance to get one year of subscription to use Wikipedia for free!</p>
+                <div class="modal-action">
+                    <label for="my-modal" class="btn bg-violet-900 tracking-widest">Reading Done</label>
+                </div>
+            </div>
         </div>
     </main>
 
