--- a/index.html
+++ b/index.html
@@ -34,14 +34,17 @@
         </div>
 
         <!-- Modal -->
-        <input type="checkbox" id="my-modal" class="modal-toggle" />
-        <div class="modal">
-            <div class="modal-box">
-                <label for="my-modal" class="btn btn-sm btn-circle absolute right-2 top-2">✕</label>
-                <h3 class="font-bold text-lg">Congratulations random Internet user!</h3>
-                <p class="py-4">You've been selected for a chance to get one year of subscription to use Wikipedia for free!</p>
-                <div class="modal-action">
-                    <label for="my-modal" class="btn bg-violet-900 tracking-widest">Reading Done</label>
+        <div id="modal-section">
+            <input type="checkbox" id="my-modal" class="modal-toggle" />
+            <div class="modal">
+                <div class="modal-box">
+                    <label for="my-modal" class="btn btn-sm btn-circle absolute right-2 top-2">✕</label>
+                    <h3 class="font-bold text-xl text-blue-700 text-right mr-8" id="modal-arabic-title"></h3>
+                    <h3 class="font-bold text-xl" id="modal-english-title"></h3>
+                    <p class="py-4">You've been selected for a chance to get one year of subscription to use Wikipedia for free!</p>
+                    <div class="modal-action">
+                        <label for="my-modal" class="btn bg-violet-900 tracking-widest">Reading Done</label>
+                    </div>
                 </div>
             </div>
         </div>
