pagination components add to html file

--- a/index.html
+++ b/index.html
@@ -36,6 +36,17 @@
         <div id="cards-container" class="grid md:grid-cols-3 gap-6">
             <!-- Cards Adding Dynamically -->
         </div>
+
+        <!-- Pagination -->
+        <div class="my-8 text-center">
+            <div class="btn-group">
+                <button class="btn btn-active">1</button>
+                <button class="btn">2</button>
+                <button class="btn">3</button>
+                <button class="btn">4</button>
+            </div>
+        </div>
+
         <!-- Modal -->
         <input type="checkbox" id="my-modal" class="modal-toggle" />
         <div class="modal">
