pagination id added

--- a/index.html
+++ b/index.html
@@ -40,10 +40,13 @@
         <!-- Pagination -->
         <div class="my-8 text-center">
             <div class="btn-group">
-                <button class="btn btn-active">1</button>
-                <button class="btn">2</button>
-                <button class="btn">3</button>
-                <button class="btn">4</button>
+                <button class="btn btn-active" id="page-1">1</button>
+                <button class="btn" id="page-2">2</button>
+                <button class="btn" id="page-3">3</button>
+                <button class="btn" id="page-4">4</button>
+                <button class="btn" id="page-5">5</button>
+                <button class="btn" id="page-6">6</button>
+                <button class="btn" id="page-7">7</button>
             </div>
         </div>
 
