bkash image and number added

--- a/recieve coffe.html
+++ b/recieve coffe.html
@@ -29,8 +29,11 @@
         <p class="mt-2">You are Amazing <i class="fa-solid fa-heart"></i></p>
     </header>
 
-    <main>
-        
+    <main class="mt-8">
+        <div class="flex justify-center">
+            <img src="./images/bkash-system.png" alt="">
+        </div>
+        <h2 class="my-12 text-3xl font-semibold text-center">Tap and Hold to copy the number easily: 01624632302</h2>
     </main>
 
 
