coffee number color updated

--- a/recieve coffee.html
+++ b/recieve coffee.html
@@ -33,7 +33,7 @@
         <div class="flex justify-center">
             <img src="./images/bkash-system.png" alt="">
         </div>
-        <h2 class="my-12 text-3xl font-semibold text-center">Tap and Hold to copy the number easily: 01624632302</h2>
+        <h2 class="my-12 text-3xl font-semibold text-center">Tap and Hold to copy the number easily: <span class="text-red-700">01624632302</span></h2>
     </main>
 
     <footer class="footer items-center px-4 md:px-20 py-8 bg-neutral text-neutral-content">
