--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <!-- Pagination -->
         <div class="my-8 text-center">
             <div class="btn-group">
-                <button class="btn btn-active" id="page-1">1</button>
+                <button class="btn" id="page-1">1</button>
                 <button class="btn" id="page-2">2</button>
                 <button class="btn" id="page-3">3</button>
                 <button class="btn" id="page-4">4</button>
