--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
 
         <!-- Spinner2 ~~~ Loading -->
-        <div class="text-center mt-8 hidden" id="spinner">
+        <div class="text-center mt-8 hidden" id="spinner2">
           <div class="animate-spin inline-block w-8 h-8 border-[4px] border-current border-t-transparent text-blue-600 rounded-full" role="status" aria-label="loading">
             <span class="sr-only">Loading...</span>
           </div>
