social preview meta added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Social Preview Start -->
+    <meta property="og:title" content="Tilwat Quran">
+    <meta property="og:type" content="This website is only for helping those person who usually spend time outside for work. And they can't pick the phhysical Quran all the Day!!!">
+    <meta property="og:image" content="./images/favicon.webp">
+    <meta property="og:url" content="https://tilwat-quran-by-rion.netlify.app/">
+    <!-- Social Preview End -->
+
     <link rel="shortcut icon" href="./images/favicon.webp" type="image/x-icon">
     <title>Tilwat Quran</title>
 
