social preview meta tag updated type to des

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!-- Social Preview Start -->
     <meta property="og:title" content="Tilwat Quran">
-    <meta property="og:type" content="This website is only for helping those person who usually spend time outside for work. And they can't pick the phhysical Quran all the Day!!!">
+    <meta property="og:description" content="This website is only for helping those person who usually spend time outside for work. And they can't pick the phhysical Quran all the Day!!!">
     <meta property="og:image" content="./images/favicon.webp">
     <meta property="og:url" content="https://tilwat-quran-by-rion.netlify.app/">
     <!-- Social Preview End -->
