--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <p>Copyright © <span class="tracking-wider">RION</span> 2023 - All right reserved</p>
       </div> 
       <div class="grid-flow-col gap-4 md:place-self-center md:justify-self-end align-items-center">
-        <a href="./recieve coffee.html" target="_blank" class="text-xl">Buy Me a Cofee <i class="fa-sharp fa-solid fa-mug-hot"></i></a>
+        <a href="./recieve coffee.html" target="_blank" class="text-xl">Click & Buy Me a Cofee <i class="fa-sharp fa-solid fa-mug-hot"></i></a>
         <a href="https://www.facebook.com/Pichku.Sauce/" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"></path></svg></a>
       </div>
     </footer>
