heading section updated

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </head>
 <body>
     <header class="text-center bg-slate-300 text-gray-600 py-5 shadow-xl">
-        <h1 class="text-4xl">Tilwat the Quran when you are not with the physical Quran</h1>
+        <h1 class="text-4xl">Tilwat this Quran when you are not with the physical Quran</h1>
         <p class="mt-2">It's Free!!!</p>
     </header>
     
